--- a/assign_4_5.ipynb
+++ b/assign_4_5.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -25,7 +25,7 @@
     "\n",
     "from scipy.misc import imshow\n",
     "\n",
-    "from numpy import array, where, take\n",
+    "from numpy import array, where, take, vstack, hstack\n",
     "\n",
     "from random import randint\n",
     "\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -105,12 +105,15 @@
    "source": [
     "images_file = File(IMAGE_DATA_H5PY_FILE, 'r')\n",
     "images = images_file['/images/']\n",
-    "label_length = images_file['/label_length/']"
+    "label_length = images_file['/label_length/']\n",
+    "labels = images_file['/labels/']\n",
+    "labels_start = images_file['/label_start_ix/']\n",
+    "labels_end = images_file['/label_end_ix/']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {
     "collapsed": false
    },
@@ -157,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 149,
    "metadata": {
     "collapsed": false
    },
@@ -176,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "metadata": {
     "collapsed": false
    },
@@ -188,16 +191,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 157,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pancake redone jump pepper queen \n",
+      "true labels: ['A man that is standing on a tennis court with a racquet.', 'a tennis player with a racket on the court ', 'A man holding a racquet on top of a tennis court.', 'An old man playing tennis on the tennis court.', 'The tennis player wearing a black cap is swinging a racket.']\n"
+     ]
+    }
+   ],
    "source": [
     "label = get_label(result, image_id)\n",
     "\n",
     "print(label, '\\ntrue labels:', captions[entry_id])\n",
     "imshow(images[entry_id])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# assignment 5\n",
+    "## create training data\n",
+    "\n",
+    "We need to compute the 1000D-network output for each image. This output has to be set as input of the decoder k times, where k is the number of captions that exist for that particular image. E. g.:\n",
+    "\n",
+    "image_0 has 5 captions.\n",
+    "\n",
+    "1. compute x = f(image_0)\n",
+    "2. align them:\n",
+    "\n",
+    "$decode\\bigg(\\begin{bmatrix}x\\\\x\\\\x\\\\x\\\\x\\end{bmatrix}\\bigg) = \\begin{bmatrix}repr(caption_1)\\\\repr(caption_2)\\\\repr(caption_3)\\\\repr(caption_4)\\\\repr(caption_5)\\end{bmatrix}$ "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_repr(word_seq)\n",
+    "\n",
+    "dec_x_rows = [] \n",
+    "dec_y_rows = []\n",
+    "TRAINING_LIMIT = 2\n",
+    "for i in range(images.shape[0]):\n",
+    "    if (i == TRAINING_LIMIT): break\n",
+    "    a_1000_d = f([imgages[i]])\n",
+    "    for j in range(labels_start[i], labels_end[i])\n",
+    "        dec_x_rows.append(a_1000_d)\n",
+    "        dec_y_rows.append(labels[j])\n",
+    "\n",
+    "dec_x = vstack(dec_x_rows)\n",
+    "dec_y = vstack(dec_y_rows)\n",
+    "print(dec_x.shape, dec_y.shape)"
    ]
   },
   {
