--- a/assign_4_5.ipynb
+++ b/assign_4_5.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -144,12 +144,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['A woman riding a bike down a bike trail.',\n",
+       " 'A woman looks behind her and smiles on a bicycle by water.',\n",
+       " 'A woman is riding a bike along a pathway beside a lake.',\n",
+       " 'a woman riding a bicycle on the sidewalk next to a body of water',\n",
+       " 'A very pretty girl on a bike by the water.']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "captions[0]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -160,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -179,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -191,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -200,13 +217,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pancake redone jump pepper queen \n",
-      "true labels: ['A man that is standing on a tennis court with a racquet.', 'a tennis player with a racket on the court ', 'A man holding a racquet on top of a tennis court.', 'An old man playing tennis on the tennis court.', 'The tennis player wearing a black cap is swinging a racket.']\n"
+      "pancake redone jump pepper queen michael positions snowboards telling wavy wave friendly windsurfer compact \n",
+      "true labels: ['a cat rubbing its face against a bottle.c', 'A tabby cat rubs its face on a bottle of catnip.', 'A pretty cat sits next to a bottle of catnip.', 'Cat laying next to and sniffing a bottle of catnip', 'A man sitting on top of a tale next to a  bottle of catnip.']\n"
      ]
     }
    ],
    "source": [
-    "label = get_label(result, image_id)\n",
+    "label = get_label(result, entry_id)\n",
     "\n",
     "print(label, '\\ntrue labels:', captions[entry_id])\n",
     "imshow(images[entry_id])"
@@ -231,27 +248,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 1000) (4, 16)\n"
+     ]
+    }
+   ],
    "source": [
-    "def get_repr(word_seq)\n",
-    "\n",
     "dec_x_rows = [] \n",
     "dec_y_rows = []\n",
-    "TRAINING_LIMIT = 2\n",
+    "TRAINING_LIMIT = 1\n",
     "for i in range(images.shape[0]):\n",
     "    if (i == TRAINING_LIMIT): break\n",
-    "    a_1000_d = f([imgages[i]])\n",
-    "    for j in range(labels_start[i], labels_end[i])\n",
+    "    a_1000_d = the_func([images[i]])[0]\n",
+    "    for j in range(labels_start[i], labels_end[i]+1):\n",
     "        dec_x_rows.append(a_1000_d)\n",
     "        dec_y_rows.append(labels[j])\n",
     "\n",
     "dec_x = vstack(dec_x_rows)\n",
     "dec_y = vstack(dec_y_rows)\n",
     "print(dec_x.shape, dec_y.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Building the decoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class MySimpleRecurrent(BaseRecurrent, Initializable):\n",
+    "    @lazy(allocation=['dim'])\n",
+    "    def __init__(self, dim, activation, **kwargs):\n",
+    "        self.dim = dim\n",
+    "        children = [activation]\n",
+    "        kwargs.setdefault('children', []).extend(children)\n",
+    "        super(MySimpleRecurrent, self).__init__(**kwargs)\n",
+    "\n",
+    "    @property\n",
+    "    def W(self):\n",
+    "        return self.parameters[0]\n",
+    "\n",
+    "    def get_dim(self, name):\n",
+    "        if name == 'mask':\n",
+    "            return 0\n",
+    "        if name in (MySimpleRecurrent.apply.sequences +\n",
+    "                    MySimpleRecurrent.apply.states):\n",
+    "            return self.dim\n",
+    "        return super(MySimpleRecurrent, self).get_dim(name)\n",
+    "\n",
+    "    def _allocate(self):\n",
+    "        self.parameters.append(shared_floatx_nans((self.dim, self.dim), name=\"W\"))\n",
+    "        add_role(self.parameters[0], WEIGHT)\n",
+    "\n",
+    "        # NB no parameters for initial state\n",
+    "\n",
+    "    def _initialize(self):\n",
+    "        self.weights_init.initialize(self.W, self.rng)\n",
+    "\n",
+    "    @recurrent(sequences=['inputs', 'mask'], states=['states'],\n",
+    "               outputs=['states'], contexts=['context'])\n",
+    "    def apply(self, inputs, states, mask=None, **kwargs):\n",
+    "        next_states = inputs + tensor.dot(states, self.W)\n",
+    "        next_states = self.children[0].apply(next_states)\n",
+    "        if mask:\n",
+    "            next_states = (mask[:, None] * next_states +\n",
+    "                           (1 - mask[:, None]) * states)\n",
+    "        return next_states\n",
+    "\n",
+    "    @application(contexts=[\"context\"])\n",
+    "    def initial_states(self, batch_size, *args, **kwargs):\n",
+    "        init = kwargs[\"context\"]\n",
+    "        return init.T\n",
+    "\n",
+    "    @initial_states.property('outputs')\n",
+    "    def initial_states_outputs(self):\n",
+    "        return self.apply.states\n",
+    "\n",
+    "    "
    ]
   },
   {
